istio-ingress-config/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api-svc
  labels:
    app: python-api-svc
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
  selector:
    app: python-api-deployment
