istio-ingress-config/api-istio-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
  labels:
    version: v1
  name: api-gateway
spec:
  selector:
    istio: istio-ingress
  servers:
  - hosts:
    - vpce-svc-06772e91e01dfa6a9.ap-south-1.vpce.amazonaws.com
    port:
      name: http-dev
      number: 80
      protocol: HTTP
