istio-ingress-config/api-istio-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    version: v1
  name: api-vs
spec:
  gateways:
  - api-gateway
  hosts:
  - vpce-svc-06772e91e01dfa6a9.ap-south-1.vpce.amazonaws.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: python-api-svc
        port:
          number: 80
        subset: v1
